ultimate-devops-project-demo/kubernetes/learning/22-jenkins/httproute-jenkins.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: jenkins
spec:
  parentRefs:
  - name: gateway
    namespace: opentelimetry
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /jenkins
    backendRefs:
    - name: jenkins
      port: 8080
